Fix page controls overlapping page content

--- a/poke-app/src/components/PokePageContainer/PokePageContainer.module.css
+++ b/poke-app/src/components/PokePageContainer/PokePageContainer.module.css
@@ -1,15 +1,24 @@
 .container {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
   max-width: 75%;
   margin: auto;
   margin-top: 15px;
 }
+.statsContainer {
+  width: 75%;
+}
 .pageControls {
   position: fixed;
-  width: 100%;
+  right: 5%;
+  width: 7.5%;
   height: 100%;
+}
+.container .pageControls:nth-child(1) {
+  left: 5%;
 }
 .pageControls__left {
   position: absolute;
